headless: Adjust browser window size to contain all WebContents

When setting the bounds of a WebContents, we shouldn't also change the
browser window size to the size of the WebContents. This can lead to
the bounds of the WebContents lying outside the browser's window, in
which case screenshots will hang.

Instead, make sure that all WebContents are contained within the browser
window size.

Bug: 832138
Change-Id: Iaeb8b36b4edceedfdf2fdd1d54c3765587c79ea7
Reviewed-on: https://chromium-review.googlesource.com/1031655
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554285}
Former-commit-id: 1cbd8e0f4d2f3405e7b57bc6d547c49763b4199d